--- a/.github/workflows/daily_report.yml
+++ b/.github/workflows/daily_report.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Run Claude Summary
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          ANTHROPIC_BASE_URL: ${{ secrets.ANTHROPIC_BASE_URL }}
         run: |
           npm install -g @anthropic-ai/claude-code
           git clone https://github.com/v8/v8.git
