--- a/.github/workflows/daily_report.yml
+++ b/.github/workflows/daily_report.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   summarize:
     runs-on: ubuntu-latest
+    permissions:
+       contents: write
     steps:
       - name: Checkout V8
         uses: actions/checkout@v4
